--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -1,8 +1,189 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load File"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import sklearn as sk\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn import metrics\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import auc, roc_curve\n",
+    "from sklearn.metrics import precision_recall_curve\n",
+    "from sklearn.metrics import classification_report\n",
+    "import seaborn as sns\n",
+    "from sklearn import metrics\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_path = \"C:/Users/Enduser/OneDrive - Asia Pacific University/uni/Y3S2/fyp/Model_trial/btc_trial_dataset2.csv\"\n",
+    "dataset_df = pd.read_csv(df_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature Selection: Dropping Irrelevant or Redundant Columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_cols = ['tx_hash', 'is_malicious', 'all_malicious', 'mean_in_btc', 'mean_out_btc','in_malicious']\n",
+    "dataset_df.drop(columns=drop_cols, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>indegree</th>\n",
+       "      <th>outdegree</th>\n",
+       "      <th>in_btc</th>\n",
+       "      <th>out_btc</th>\n",
+       "      <th>total_btc</th>\n",
+       "      <th>out_malicious</th>\n",
+       "      <th>out_and_tx_malicious</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.478187</td>\n",
+       "      <td>0.476987</td>\n",
+       "      <td>0.955174</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.019000</td>\n",
+       "      <td>2.018500</td>\n",
+       "      <td>4.037500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.180100</td>\n",
+       "      <td>0.180100</td>\n",
+       "      <td>0.360200</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5.879800</td>\n",
+       "      <td>5.879300</td>\n",
+       "      <td>11.759100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.495906</td>\n",
+       "      <td>0.495406</td>\n",
+       "      <td>0.991312</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   indegree  outdegree    in_btc   out_btc  total_btc  out_malicious  \\\n",
+       "0         4          2  0.478187  0.476987   0.955174              0   \n",
+       "1         3          2  2.019000  2.018500   4.037500              0   \n",
+       "2         1          1  0.180100  0.180100   0.360200              0   \n",
+       "3         1          2  5.879800  5.879300  11.759100              0   \n",
+       "4         4          2  0.495906  0.495406   0.991312              0   \n",
+       "\n",
+       "   out_and_tx_malicious  \n",
+       "0                     0  \n",
+       "1                     0  \n",
+       "2                     0  \n",
+       "3                     0  \n",
+       "4                     0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Splitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -12,57 +193,86 @@
       "Data Split Complete:\n",
       "Train Size: 72000\n",
       "Validation Size: 8000\n",
-      "Test Size: 20000\n",
-      "Log Transformation Complete\n",
-      "Feature Engineering Complete\n",
-      "Class distribution after SMOTE:\n",
-      "out_and_tx_malicious\n",
-      "0    71922\n",
-      "1      719\n",
-      "Name: count, dtype: int64\n",
-      "Scaling Complete\n"
+      "Test Size: 20000\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import RobustScaler\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "import lightgbm as lgb\n",
-    "from sklearn.metrics import classification_report, roc_auc_score, confusion_matrix\n",
     "\n",
-    "# Load your dataset (assuming this path is correct)\n",
-    "df_path = \"C:/Users/Enduser/OneDrive - Asia Pacific University/uni/Y3S2/fyp/Model_trial/btc_trial_dataset2.csv\"\n",
-    "dataset_df = pd.read_csv(df_path)\n",
-    "\n",
-    "# Drop unnecessary columns\n",
-    "drop_cols = ['tx_hash', 'is_malicious', 'all_malicious', 'mean_in_btc', 'mean_out_btc','in_malicious']\n",
-    "dataset_df.drop(columns=drop_cols, inplace=True)\n",
-    "\n",
-    "# Define features and target\n",
+    "# Load dataset\n",
     "X = dataset_df.drop('out_and_tx_malicious', axis=1)\n",
     "y = dataset_df['out_and_tx_malicious']\n",
     "\n",
-    "# Original dataset split: train (80%) and test (20%)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y, random_state=42)\n",
+    "# Split dataset into Train (80%) and Test (20%) ensuring stratification\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, stratify=y, random_state=42\n",
+    ")\n",
     "\n",
-    "# Further split training data: train (85%) and validation (15%)\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.10, random_state=42)\n",
+    "# Further split Train into Train (90%) and Validation (10%)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(\n",
+    "    X_train, y_train, test_size=0.10, stratify=y_train, random_state=42\n",
+    ")\n",
     "\n",
     "print(\"Data Split Complete:\")\n",
     "print(f\"Train Size: {X_train.shape[0]}\")\n",
     "print(f\"Validation Size: {X_val.shape[0]}\")\n",
-    "print(f\"Test Size: {X_test.shape[0]}\")\n",
+    "print(f\"Test Size: {X_test.shape[0]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature Scaling: Logarithmic Transformation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log Transformation Complete\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "# Log transformation\n",
+    "# Define features for log transformation\n",
     "log_features = ['indegree', 'outdegree', 'in_btc', 'out_btc', 'total_btc']\n",
-    "for df in [X_train, X_val, X_test]:\n",
-    "    df[log_features] = np.log1p(df[log_features])\n",
     "\n",
-    "print(\"Log Transformation Complete\")\n",
+    "# Apply log transformation\n",
+    "for df in [X_train, X_val, X_test]:  \n",
+    "    df[log_features] = np.log1p(df[log_features])  # log1p avoids log(0)\n",
     "\n",
+    "print(\"Log Transformation Complete\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature Engineer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature Engineering Complete\n"
+     ]
+    }
+   ],
+   "source": [
     "# Feature Engineering Function\n",
     "def add_features(df):\n",
     "    df['out_malicious_to_total_btc'] = df['out_malicious'] / (df['total_btc'] + 1e-6)\n",
@@ -71,14 +281,14 @@
     "    df['net_btc_flow'] = df['in_btc'] - df['out_btc']\n",
     "    return df\n",
     "\n",
-    "# Apply feature engineering\n",
+    "# Apply feature engineering to Train, Validation, and Test sets\n",
     "X_train_fe = add_features(X_train)\n",
     "X_val_fe = add_features(X_val)\n",
     "X_test_fe = add_features(X_test)\n",
     "\n",
-    "# Select final features\n",
+    "# Select the final set of features\n",
     "selected_features = [\n",
-    "    'in_btc', 'out_btc', 'total_btc', 'out_malicious', 'indegree', 'outdegree',\n",
+    "    'in_btc', 'out_btc', 'total_btc', 'out_malicious', 'indegree','outdegree',\n",
     "    'out_malicious_to_total_btc', 'log_total_btc',\n",
     "    'out_malicious_in_btc_interaction', 'net_btc_flow'\n",
     "]\n",
@@ -87,37 +297,96 @@
     "X_val_final = X_val_fe[selected_features]\n",
     "X_test_final = X_test_fe[selected_features]\n",
     "\n",
-    "print(\"Feature Engineering Complete\")\n",
-    "\n",
-    "# Apply SMOTE (optional, but we'll also use LightGBM's native imbalance handling)\n",
-    "smote = SMOTE(sampling_strategy=0.01, random_state=42)\n",
-    "X_train_smote, y_train_smote = smote.fit_resample(X_train_final, y_train)\n",
-    "\n",
-    "print(\"Class distribution after SMOTE:\")\n",
-    "print(pd.Series(y_train_smote).value_counts())\n",
-    "\n",
-    "# Scaling with RobustScaler\n",
-    "scaler = RobustScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train_smote)\n",
-    "X_val_scaled = scaler.transform(X_val_final)\n",
-    "X_test_scaled = scaler.transform(X_test_final)\n",
-    "\n",
-    "# Convert back to DataFrame for consistency\n",
-    "X_train_scaled_df = pd.DataFrame(X_train_scaled, columns=X_train_final.columns)\n",
-    "X_val_scaled_df = pd.DataFrame(X_val_scaled, columns=X_val_final.columns)\n",
-    "X_test_scaled_df = pd.DataFrame(X_test_scaled, columns=X_test_final.columns)\n",
-    "\n",
-    "print(\"Scaling Complete\")\n",
-    "\n",
-    "# Prepare LightGBM Datasets\n",
-    "train_data = lgb.Dataset(X_train_scaled_df, label=y_train_smote)\n",
-    "val_data = lgb.Dataset(X_val_scaled_df, label=y_val, reference=train_data)\n",
-    "\n"
+    "print(\"Feature Engineering Complete\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Data Balancing - Smote"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class distribution after SMOTE:\n",
+      "out_and_tx_malicious\n",
+      "0    71923\n",
+      "1      719\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Apply SMOTE to handle class imbalance\n",
+    "smote = SMOTE(sampling_strategy=0.01, random_state=42)\n",
+    "X_train_smote, y_train_smote = smote.fit_resample(X_train_final, y_train)\n",
+    "\n",
+    "print(\"Class distribution after SMOTE:\")\n",
+    "print(pd.Series(y_train_smote).value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature Scaling: Robust Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaling Complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import RobustScaler\n",
+    "\n",
+    "# Initialize RobustScaler\n",
+    "scaler = RobustScaler()\n",
+    "\n",
+    "# Fit and transform Train set\n",
+    "X_train_scaled = scaler.fit_transform(X_train_smote)\n",
+    "\n",
+    "# Transform Validation and Test sets using the same scaler\n",
+    "X_val_scaled = scaler.transform(X_val_final)\n",
+    "X_test_scaled = scaler.transform(X_test_final)\n",
+    "\n",
+    "# Convert back to DataFrame\n",
+    "X_train_scaled_df = pd.DataFrame(X_train_scaled, columns=X_train_final.columns)\n",
+    "X_val_scaled_df = pd.DataFrame(X_val_scaled, columns=X_val_final.columns)\n",
+    "X_test_scaled_df = pd.DataFrame(X_test_scaled, columns=X_test_final.columns)\n",
+    "\n",
+    "print(\"Scaling Complete\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SVM Model 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -199,23 +468,23 @@
     "from sklearn.metrics import classification_report, roc_auc_score, recall_score, f1_score\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "# Step 1: Initialize SVM with class weights\n",
+    "# Initialize SVM with class weights\n",
     "svm_model = SVC(\n",
     "    kernel='rbf',           # Radial basis function kernel for non-linear separation\n",
     "    class_weight='balanced', # Adjust weights to emphasize fraud class\n",
     "    probability=True,       # Enable probability estimates for threshold tuning\n",
     "    random_state=42,\n",
-    "    C=1.0                   # Regularization parameter (tune later if needed)\n",
+    "    C=1.0                   # Regularization parameter \n",
     ")\n",
     "\n",
-    "# Step 2: Train the model on SMOTE-processed and scaled training data\n",
+    "# Train the model \n",
     "svm_model.fit(X_train_scaled_df, y_train_smote)\n",
     "\n",
-    "# Step 3: Evaluate on Validation Set\n",
+    "# Evaluate \n",
     "# Predict probabilities for threshold tuning\n",
     "y_val_proba = svm_model.predict_proba(X_val_scaled_df)[:, 1]\n",
     "\n",
-    "# Function to adjust threshold and evaluate\n",
+    "# adjust threshold and evaluate\n",
     "def evaluate_threshold(y_true, y_proba, threshold):\n",
     "    y_pred = (y_proba >= threshold).astype(int)\n",
     "    recall = recall_score(y_true, y_pred)\n",
@@ -241,7 +510,7 @@
     "\n",
     "print(f\"Best Threshold: {best_threshold}, Best Recall: {best_recall}\")\n",
     "\n",
-    "# Step 4: Final Predictions on Test Set with Best Threshold\n",
+    "# Predictions on Test Set with Best Threshold\n",
     "y_test_proba = svm_model.predict_proba(X_test_scaled_df)[:, 1]\n",
     "y_test_pred = (y_test_proba >= best_threshold).astype(int)\n",
     "\n",
@@ -249,7 +518,7 @@
     "print(classification_report(y_test, y_test_pred))\n",
     "print(f\"ROC AUC: {roc_auc_score(y_test, y_test_proba):.4f}\")\n",
     "\n",
-    "# Step 5: Optional Cross-Validation for Robustness\n",
+    "# Cross-Validation for Robustness\n",
     "cv_scores = cross_val_score(\n",
     "    svm_model, X_train_scaled_df, y_train_smote, cv=5, scoring='recall'\n",
     ")\n",
@@ -261,12 +530,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# improved"
+    "# SVM Model 2 with Grid Search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -527,18 +796,7 @@
     "from sklearn.calibration import CalibratedClassifierCV\n",
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
-    "# Step 1: Scale Data First\n",
-    "# scaler = StandardScaler()\n",
-    "# X_train_scaled = scaler.fit_transform(X_train)\n",
-    "# X_val_scaled = scaler.transform(X_val)\n",
-    "# X_test_scaled = scaler.transform(X_test)\n",
-    "\n",
-    "# # Step 2: Apply SMOTE\n",
-    "# smote = SMOTE(k_neighbors=5, random_state=42)\n",
-    "# X_train_smote, y_train_smote = smote.fit_resample(X_train_scaled, y_train)\n",
-    "# X_train_smote_df = pd.DataFrame(X_train_smote, columns=X_train.columns)\n",
-    "\n",
-    "# Step 3: Hyperparameter Tuning\n",
+    "#  Hyperparameter Tuning\n",
     "param_grid = {'C': [0.1, 1, 10], 'gamma': ['scale', 'auto', 0.1]}\n",
     "grid_search = GridSearchCV(\n",
     "    SVC(kernel='rbf', class_weight='balanced', probability=True, random_state=42),\n",
@@ -547,11 +805,11 @@
     "grid_search.fit(X_train_scaled, y_train_smote)\n",
     "best_svm = grid_search.best_estimator_\n",
     "\n",
-    "# Step 4: Calibrate Model\n",
+    "# Calibrate Model\n",
     "svm_model = CalibratedClassifierCV(best_svm, method='sigmoid', cv=5)\n",
     "svm_model.fit(X_train_scaled, y_train_smote)\n",
     "\n",
-    "# Step 5: Evaluate on Validation Set\n",
+    "# Evaluate on Validation Set\n",
     "y_val_proba = svm_model.predict_proba(X_val_scaled)[:, 1]\n",
     "thresholds = np.arange(0.05, 0.95, 0.05)\n",
     "best_threshold = 0.5\n",
@@ -573,14 +831,14 @@
     "\n",
     "print(f\"Best Threshold: {best_threshold}, Best F1: {best_score}\")\n",
     "\n",
-    "# Step 6: Test Set Performance\n",
+    "#  Test Set Performance\n",
     "y_test_proba = svm_model.predict_proba(X_test_scaled)[:, 1]\n",
     "y_test_pred = (y_test_proba >= best_threshold).astype(int)\n",
     "print(\"\\nTest Set Performance:\")\n",
     "print(classification_report(y_test, y_test_pred))\n",
     "print(f\"ROC AUC: {roc_auc_score(y_test, y_test_proba):.4f}\")\n",
     "\n",
-    "# Step 7: Cross-Validation\n",
+    "#  Cross-Validation\n",
     "cv_scores = cross_val_score(svm_model, X_train_scaled, y_train_smote, cv=5, scoring='recall')\n",
     "print(f\"\\n5-Fold CV Recall Scores: {cv_scores}\")\n",
     "print(f\"Mean CV Recall: {cv_scores.mean():.4f}, Std: {cv_scores.std():.4f}\")"
